<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context=".UIs.MainActivity$HomeFrag"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:id="@+id/sendBitcoinFrag"
                android:background="?attr/background_color"
              android:orientation="vertical">

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_centerHorizontal="true"
              android:id="@+id/tvEnterAmount"
              android:text="Enter amount to send"
              android:textColor="?attr/text_color"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:textSize="20sp"
              android:textStyle="bold"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/imageView3"
              app:layout_constraintHorizontal_bias="0.146"
              android:layout_marginTop="104dp" android:fontFamily="@font/amiko"/>

    <EditText android:layout_height="43dp"
              android:layout_width="372dp"
              android:layout_centerHorizontal="true"
              android:id="@+id/etAmountToSend"
              android:layout_below="@+id/tvEnterAmount"
              android:textColorHint="@color/black"
              android:ems="10"
              android:inputType="numberDecimal"
              android:hint="0.0"
              android:textColor="@color/black"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:background="@drawable/etbackground"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:layout_marginTop="20dp"
              app:layout_constraintTop_toBottomOf="@+id/tvEnterAmount"
              android:gravity="center_horizontal|center_vertical"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_alignParentTop="true"
              android:id="@+id/tvAvailableBalance"
              android:textColor="?attr/text_color"
              android:text="@string/_0_005_btc_available"
              android:layout_centerHorizontal="true"
              android:textSize="16sp"
              android:inputType="numberDecimal"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/tvRecipientAddress"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginBottom="72dp"
              app:layout_constraintTop_toBottomOf="@+id/etAmountToSend"
              android:layout_marginTop="20dp"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_alignParentTop="true"
              android:id="@+id/tvRecipientAddress"
              android:layout_centerHorizontal="true"
              android:text="@string/enter_recipient_address"
              android:textColor="?attr/text_color"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:textSize="20sp"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="40dp"
              app:layout_constraintTop_toBottomOf="@+id/tvAvailableBalance"/>

    <EditText android:layout_height="50dp"
              android:layout_width="360dp"
              android:id="@+id/etRecipientAddress"
              android:ems="10"
              android:textColorHint="@color/black"
              android:hint="@string/enter_recipient_address"
              android:maxLength="42"
              android:inputType="textShortMessage"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="20dp"
              android:background="@drawable/etbackground"
              app:layout_constraintTop_toBottomOf="@+id/tvRecipientAddress"
              android:textAlignment="center"
              android:gravity="center_horizontal|center_vertical"/>

    <ImageButton
            android:id="@+id/btnSendBitcoin"
            android:layout_width="164dp"
            android:layout_height="70dp"
            android:src="@drawable/sendicon"
            android:layout_below="@+id/tvRecipientAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:background="?attr/background_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintBottom_toTopOf="@+id/callingPlaceholderFrag"
            android:layout_marginBottom="96dp"
            app:layout_constraintTop_toBottomOf="@+id/etRecipientAddress"
            android:layout_marginTop="20dp"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageButton
            android:id="@+id/callingPlaceholderFrag"
            android:layout_width="136dp"
            android:layout_height="80dp"
            android:src="@drawable/homeicon"
            tools:ignore="OnClick"
            android:onClick="backToMainMenu"
            android:background="?attr/background_color"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:src="@drawable/softcoinicon"
            android:layout_width="78dp"
            android:layout_height="72dp"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintBottom_toTopOf="@+id/etAmountToSend"
            app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>