...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintTop_toBottomOf="@+id/tvRealBalance"
            android:layout_marginTop="55dp"/>

    <ImageButton
            android:id="@+id/btnCallingSend"
            android:layout_width="274dp"
            android:layout_height="57dp"
            android:src="@drawable/sendbitcoin"
            tools:ignore="OnClick"
            android:onClick="viewSend"
            android:background="?attr/background_color"
...
